[package]
name = "rui_azure"
version = "0.0.2"
repository = "https://github.com/enex/rust-azure"
license = "LGPL-3.0"
authors = ["enex <sive@web.de>"]
keywords = ["graphics", "ui", "2d"]
description = "backend based on rust-azure for rui"

[dependencies.azure]
git = "https://github.com/servo/rust-azure"
version = "*"

[dependencies.layers]
git = "https://github.com/servo/rust-layers"
varsion = "*"

[dependencies]
glutin = "*"
gl = "*"
time = "*"